apply reformatting and remove unused code